feat: Update project name to PRO version
Renames the project to "Mohamad Fikrie's Portfolio PRO" in package.json and metadata.json to reflect the enhanced or premium nature of this version of the portfolio.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mohamad-fikrie's-portfolio",
+  "name": "mohamad-fikrie's-portfolio-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
